feat(backend/frontend): create basic auth system

--- a/apps/frontend/locales/fr.json
+++ b/apps/frontend/locales/fr.json
@@ -1,3 +1,8 @@
 {
-	"hello": "Bonjour"
+	"errors": {
+		"somethingWentWrong": "Une erreur inattendue s'est produite",
+		"invalidCredentials": "Identifiants invalides",
+		"unAuthorizedPage": "Vous n'êtes pas autorisé à accéder à cette page",
+		"unAuthorizedAction": "Vous n'êtes pas autorisé à effectuer cette action"
+	}
 }
