--- a/apps/frontend/locales/en.json
+++ b/apps/frontend/locales/en.json
@@ -1,3 +1,8 @@
 {
-	"hello": "Hello"
+	"errors": {
+		"somethingWentWrong": "Something went wrong",
+		"invalidCredentials": "Invalid credentials",
+		"unAuthorizedPage": "You are not authorized to access this page",
+		"unAuthorizedAction": "You are not authorized to perform this action"
+	}
 }
