feat(frontend): reset-password

--- a/apps/frontend/locales/fr.json
+++ b/apps/frontend/locales/fr.json
@@ -3,6 +3,7 @@
 		"somethingWentWrong": "Une erreur inattendue s'est produite",
 		"invalidCredentials": "Identifiants invalides",
 		"unAuthorizedPage": "Vous n'êtes pas autorisé à accéder à cette page",
-		"unAuthorizedAction": "Vous n'êtes pas autorisé à effectuer cette action"
+		"unAuthorizedAction": "Vous n'êtes pas autorisé à effectuer cette action",
+		"invalidToken": "Jeton invalide"
 	}
 }
