--- a/apps/frontend/locales/en.json
+++ b/apps/frontend/locales/en.json
@@ -3,6 +3,7 @@
 		"somethingWentWrong": "Something went wrong",
 		"invalidCredentials": "Invalid credentials",
 		"unAuthorizedPage": "You are not authorized to access this page",
-		"unAuthorizedAction": "You are not authorized to perform this action"
+		"unAuthorizedAction": "You are not authorized to perform this action",
+		"invalidToken": "Invalid token"
 	}
 }
